<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_second_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/et_second_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:textSize="30sp"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/btn_second_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_second"
        android:layout_gravity="center"
        android:textSize="20sp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/label2"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="150dp"
        />


</LinearLayout>