<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_main_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:textSize="30sp"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/btn_main_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_main"
        android:layout_gravity="center"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/tv_main_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/label1"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="150dp"
        />


</LinearLayout>